--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  
   <title>Translator | Talk Banana</title>
-</head>
+
 <body>
-  <h2>Talk Banana</h2>
+  <div class="nav">
+  <h1 class="hero-heading">
+    Talk Banana
+  </h1>
+  </div>
+  
+  <div class="input">
+    <textarea id="txt-input" placeholder="enter your text here to translate to the minions language"></textarea>
+  </div>
+
+  <button id="btn-translate">Translate</button>
+  <div class="output-heading">The Output text would appear here👇</div>
+  <div id="output"></div>
+  
+  <Script src="./app.js" type="text/javaScript"></Script>
+  <div class="footer">
+    <h3 class="footer-heading">
+      connect to me
+    </h3>
+    <ul class="non-bullet">
+      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
+      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
+      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
+      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
+      
+    </ul>
+    </div>
 </body>
 </html>
+
+  
