feat: clear button added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" type="image/svg" href="./images/favicon.svg">
   
   <title>Translator | Talk Banana</title>
-
+</head>
 <body>
   <div class="nav">
   <h1 class="hero-heading">
@@ -18,8 +19,11 @@
   <div class="input">
     <textarea id="txt-input" placeholder="enter your text here to translate to the minions language"></textarea>
   </div>
-
-  <button id="btn-translate">Translate</button>
+  <div class="button">
+    <button id="btn-translate">Translate</button>
+    <button id="btn-clear">Clear</button>
+    </div>
+  
   <div class="output-heading">The Output text would appear here👇</div>
   <div id="output"></div>
   
@@ -29,10 +33,10 @@
       connect to me
     </h3>
     <ul class="non-bullet">
-      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
-      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
-      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
-      <li class="list-item-inline"> <a class="link" href="/">Github</a> </li>
+      <li class="list-item-inline"> <a class="link" href="https://github.com/Aritra-art">Github</a> </li>
+      <li class="list-item-inline"> <a class="link" href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a> </li>
+      <li class="list-item-inline"> <a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a> </li>
+      <li class="list-item-inline"> <a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a> </li>
       
     </ul>
     </div>
