--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
-  
+
   <title>Translator | Talk Banana</title>
 </head>
+
 <body>
   <div class="nav">
-  <h1 class="hero-heading">
-    Talk Banana
-  </h1>
+    <h1 class="hero-heading">
+      Talk Banana</h1>
+
+    <p class="navbar-description">Convert from English to Minion speak. This
+      language is spoken by
+      the minions in
+      Despicable Me. The language is actually lots of languages. Yi kai yai yai bananna! Minion is a registered
+      trademark of Universal Studios.</p>
   </div>
-  
+
+  <div class="img-container">
+    <img src="./images/banner.jpg" alt="banner" class="banner-img">
+  </div>
+
   <div class="input">
     <textarea id="txt-input" placeholder="enter your text here to translate to the minions language"></textarea>
   </div>
   <div class="button">
     <button id="btn-translate">Translate</button>
     <button id="btn-clear">Clear</button>
-    </div>
-  
+  </div>
+
   <div class="output-heading">The Output text would appear here👇</div>
   <div id="output"></div>
-  
+
   <Script src="./app.js" type="text/javaScript"></Script>
   <div class="footer">
     <h3 class="footer-heading">
@@ -34,13 +45,14 @@
     </h3>
     <ul class="non-bullet">
       <li class="list-item-inline"> <a class="link" href="https://github.com/Aritra-art">Github</a> </li>
-      <li class="list-item-inline"> <a class="link" href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a> </li>
-      <li class="list-item-inline"> <a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a> </li>
+      <li class="list-item-inline"> <a class="link"
+          href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a> </li>
+      <li class="list-item-inline"> <a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a>
+      </li>
       <li class="list-item-inline"> <a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a> </li>
-      
-    </ul>
-    </div>
-</body>
-</html>
 
-  
+    </ul>
+  </div>
+</body>
+
+</html>
